@@ -1,4 +1,8 @@
 6.53_03
+    Bug Fixes
+    * You'd get a warning if you had a PREREQ_PM on a module with no $VERSION
+      like Config (broken in 6.51_01) [rt.cpan.org 47448]
+
     Test Fixes
     * Upgrade the version of Test::More we ship with to 0.88.
     * Fix MM_Cygwin.t for older Perls missing Cygwin::win_to_posix_path()
